--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -25,6 +25,7 @@
     "expo-constants": "~18.0.9",
     "expo-dev-client": "~6.0.20",
     "expo-linking": "~8.0.8",
+    "expo-navigation-bar": "^5.0.10",
     "expo-router": "~6.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-system-ui": "~6.0.7",
